ajuste no background em alguns tamanhos

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,6 +1,7 @@
 @media (max-width:450px){
     body{
         background:url(../images/bg-mobile.svg) var(--background-color) no-repeat;
+        background-size: contain;
         flex-direction: column;
         padding: 0;
         align-items: normal;
